Carga pre entrega 2 JS

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Proyecto JS Coder 2023</title>
 </head>
 <body>
-    <h1>PreEntrega 1 - CABRERA, JOAQUIN</h1>
+    <h1>PreEntrega 2 - CABRERA, JOAQUIN</h1>
 
-    <script src="./main.js"></script>
+
+    <script src="./mainn.js"></script>
 </body>
 </html>
