--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
 </head>
 <body>
     <h1>PreEntrega 2 - CABRERA, JOAQUIN</h1>
-<<<<<<< HEAD
-
-=======
->>>>>>> c2cada52ec06ce9b01d06dc0c7636e818be17485
-
-
-    <script src="./mainn.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
