Carga de pre entrega 3

--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto JS Coder 2023</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>PreEntrega 2 - CABRERA, JOAQUIN</h1>
-    <script src="./main.js"></script>
+    <main>
+        <form id="formularioLog">
+            <label for="dniInput">Documento</label>
+            <input type="text" id="dniInput" required>
+            <br>
+            <button id="botonLog">Ingresar</button>
+        </form>
+    </main>
+    
+    <footer><h2>Pre Entrega 3 - CABRERA, JOAQUIN</h2></footer>
+    
+    <script src="./main3.js"></script>
 </body>
 </html>
