--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -5,17 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banco Coder & Co.</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1 class="tituloPrincial">Banco Coder & Co.</h1>
     </header>
-
+    <main>
+        <button class="cerrarSesion" onclick="cerrarSesion()">Cerrar Sesión</button>
+    </main>
     <footer>
-        <h2>Pre Entrega 3 - CABRERA, JOAQUIN</h2>
+        <h2 class="tituloDos">Proyecto Final JS - CABRERA, JOAQUIN</h2>
     </footer>
 
+
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="./paginaPrincipal.js"></script>
 </body>
 </html>
