--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -14,6 +14,8 @@
     </header>
     <main>
         <button class="cerrarSesion" onclick="cerrarSesion()">Cerrar Sesión</button>
+        <button onclick="mostrarValoresDolar()" class="botonDolar">U$D</button>
+
     </main>
     <footer>
         <h2 class="tituloDos">Proyecto Final JS - CABRERA, JOAQUIN</h2>
